fixing module buiild

--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
       <article id="geocoder"></article>
     </section>
   </main>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
