removing splash screen and preparing for integration

--- a/index.html
+++ b/index.html
@@ -14,34 +14,6 @@
   <!--endbuild-->
 </head>
 <body>
-  <section id="user-type-section" class="active">
-    <article class="user-type-container">
-      <div class="">
-        <article class="user-type">
-          <h2>Welcome to the Historic Designated District Map</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <article class="user-type-btns">
-            <button type="button" name="button" data-btn-type="v-sign-up">START</button>
-          </article>
-        </article>
-      </div>
-    </article>
-  </section>
-  <section id="initial-loader-overlay" class="">
-    <article>
-      <div>
-        <div class="loader">
-          <div class="loader__bar"></div>
-          <div class="loader__bar"></div>
-          <div class="loader__bar"></div>
-          <div class="loader__bar"></div>
-          <div class="loader__bar"></div>
-          <div class="loader__ball"></div>
-        </div>
-        <p>LOADING</p>
-      </div>
-    </article>
-  </section>
   <section id="alert-overlay" class="">
     <article>
       <span class="close">x</span>
@@ -54,19 +26,7 @@
       <div></div>
     </article>
   </section>
-  <header>
-    <section id="logo">
-      <article>
-        <img src="img/logo-220x220.jpg" alt="City of Detroit">
-      </article>
-    </section>
-    <section class="filter">
-      <article>
-        <h1>Historic Designated District Map</h1>
-      </article>
-    </section>
-  </header>
-  <main class="hidden">
+  <main class="">
     <section class="data-panel">
       <button id="close-panel-btn">x</button>
       <section class="content-section"></section>
